Fixed the scrollbars and the scroll effects

--- a/CSS/Main css/main.css
+++ b/CSS/Main css/main.css
@@ -449,7 +449,8 @@ Scrollsbar
 */
 
 body::-webkit-scrollbar {
-  width: 12px; /* width of the entire scrollbar */
+  width: 8px; /* width of the entire scrollbar */
+  height: 8px;
 }
 
 body::-webkit-scrollbar-track {
@@ -459,11 +460,31 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
   background-color: var(--grey-700); /* color of the scroll thumb */
   border-radius: 50px; /* roundness of the scroll thumb */
-  border: 3px solid var(--grey-300); /* creates padding around scroll thumb */
+  border: 1px solid var(--grey-300); /* creates padding around scroll thumb */
 }
 
 body::-webkit-scrollbar-thumb:hover {
   background-color: var(--grey-600);
+}
+
+::-webkit-scrollbar {
+  width: 12vh; 
+  height: 1vh;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--background-color);
+
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--grey-500); 
+  border-radius: 50px;
+  border: 1px solid var(--grey-300); 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--grey-300);
 }
 
 /* 
